# Task_GKU_Sar

./: .gitignore  pyproject.toml  script.py
app/: conf.py  core.py  writers.py
forecasts/: weather-forecast.xlsx
